# auto-sbml

./: LibAuto.sln  NSIS_AutoFrontend.nsi  index.html  params.json
AutoFrontend/: AssemblyInfo.cs  AutoFrontend.csproj  Form1.cs  Form1.resx  MainForm.Designer.cs  MainForm.cs  NameValuePair.cs  Program.cs  TagData.cs  Util.cs  VoidDelegate.cs  VoidStringDelegate.cs  app.config
AutoFrontend/Controls/: CodeTextBox.cs  GraphControl.cs  SelectControl.cs  SetupControl.cs
AutoFrontend/Forms/: FormChangeBifurcationPlot.cs  FormChangeTimeCoursePlot.cs  FormGraphPopup.cs  FormSelectVariables.cs
AutoFrontend/SBWModules/: SBMLSupport.cs
AutoTestCSharp/: AutoTestCSharp-vs2008.csproj  AutoTestCSharp.csproj
LibAutoCSharp/: AutoConfiguration.cs  AutoInputConstants.cs  AutoResult.cs  AutoResultRun.cs  DataPoint.cs  DataPointCollection.cs  LibAutoCSharp.csproj  UtilLib.cs
libAuto/: CMakeLists.txt  SConstruct  autlab.cpp  autlib1.cpp  autlib2.cpp  autlib3.cpp  autlib4.cpp  autlib5.cpp  auto.h  auto_api.cpp  auto_api.h  auto_c.h  auto_f2c.h  auto_types.h  conpar.cpp  dmatrix.cpp  eispack.cpp  getopt.cpp  main.cpp  reduce.cpp  setubv.cpp  vsAuto.cpp  vsAuto.h  worker.cpp
libAuto/example/: AutoTestCPP.cpp
